# citation-graph

./: .coveragerc  .flake8  .gitignore  AUTHORS.txt  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
configs/: extend_article.yml
data_checks/: conftest.py  test_article_cites_article.py  test_articles.py  test_author_affiliated_with_institution.py  test_author_wrote_article.py  test_authors.py  test_clusterings.py  test_embeddings.py  test_institutions.py
src/citations/: __init__.py  dataframe.py  schemas.py  utils.py
src/citations/clustering/: __init__.py  agglomerative.py  dbscan.py  hdbscan.py  kmeans.py
src/citations/data_sources/: __init__.py  bbp.py  europmc.py  orcid.py  serp.py  utils.py
src/citations/embed/: __init__.py  openai.py
src/citations/neo4j/: __init__.py  loader.py  utils.py
src/citations/perspectives/: README.md  bbp_or_not_perspective.json  timeview_perspective.json  topics.json
src/citations/scripts/: README.md  __init__.py  combine_serp.py  create_extended_article.py  dimension_reduction.py  download_serp_articles.py  embed_openai.py  extract_affiliations_from_papers.py  fetch_orcid_article_author_records.py  fetch_serp_authors.py  gather_articles.py  gather_authors.py  integrate_batch.py  optimize_clustering.py  run_mo_opt_clustering.py  run_umap.py  serp_afetch_citations.py  serp_data_processor.py  serp_fetch_citations.py
src/citations/scripts/topics/: agenerate_keywords.py  integrate_keyword_to_neo4j.py  (+2 more)
tests/: test_utils.py
tests/data_sources/: test_europmc.py  test_orcid.py  test_serp.py
